--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -90,21 +90,16 @@ ul {
     top: 20px;
     font-size: 30px;
   }
-    .NavbarItems {
-      position: relative;
-      top: 100px;
-    }
   
     .nav-menu {
       display: flex;
       flex-direction: column;
       justify-content: left;
       width: 100%;
-      height: 485px;
+      height: 400px;
       position: relative;
-      top: 130px;
+      top: -700px;
       left: -100%;
-      opacity: 1;
       transition: all 0.5s ease;
     }
   
